修改对象实例化方法